--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -8,3 +8,18 @@ h1 {
   margin-top: 100px;
   text-align: center;
 }
+img {
+	max-width: 150px;
+}
+
+.pull-right a {
+  color: #000;
+  cursor: pointer;
+  display: inline-block;
+  margin: 3px 5px 0 0;
+  opacity: 0.2;
+}
+.pull-right a:hover {
+  color: #000;
+  opacity: 0.5;
+}
